# minidt

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md
src/: cli.rs  config.rs  constants.rs  main.rs  styles.rs  template.rs  utils.rs
